--- a/templates/partials/instances.html
+++ b/templates/partials/instances.html
@@ -1,4 +1,4 @@
-<div class="col-md-4 p-4">
+<div class="col-lg-4 col-md-6 p-4">
 	<div class="card">
 		<div class="card-header text-uppercase">{{ zone }}</div>
 		<div class="card-body">
